dodano ui i projekt praktycznie gotowy